--- a/css/index.css
+++ b/css/index.css
@@ -10,20 +10,16 @@ section{
     max-height: 100vh;
 }
 
-/*nav{
-    flex-grow: 0;
-    background-color: grey;
-    display: flex;
-    flex-direction: column;
-}*/
-
 /* Navbar */
 #navbar {
     display: flex;
-    width: 100%;
     background-color: #fff;
     margin-bottom: 10px;
-    padding-right: 30%;
+	padding: 5px
+}
+
+#navbar #logo {
+	padding-left: calc(250px + 5%);
 }
 
 #navbar a {
@@ -35,6 +31,7 @@ section{
 #navbar div {
     display: flex;
     align-items: center;
+	padding-right: calc(250px + 5%);
 }
 
 .site-header {
@@ -43,43 +40,7 @@ section{
 	box-shadow: 0 0 8px #0000001c;
     margin-bottom: .5rem;
 }
-/*
-.navbar {
-	position: relative;
-	display: -ms-flexbox;
-	display: flex;
-	-ms-flex-wrap: wrap;
-	flex-wrap: wrap;
-	-ms-flex-align: center;
-	align-items: center;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
-	padding: .5rem 1rem;
-}
 
-.navbar-expand-lg {
-	-ms-flex-flow: row nowrap;
-	flex-flow: row nowrap;
-	-ms-flex-pack: start;
-	justify-content: flex-start;
-}
-
-.navbar-expand-lg > .container, .navbar-expand-lg > .container-fluid {
-	-ms-flex-wrap: nowrap;
-	flex-wrap: nowrap;
-}
-
-.navbar > .container, .navbar > .container-fluid {
-	display: -ms-flexbox;
-	display: flex;
-	-ms-flex-wrap: wrap;
-	flex-wrap: wrap;
-	-ms-flex-align: center;
-	align-items: center;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
-}
-*/
 ul {
     margin: 0;
     display: flex;
@@ -99,11 +60,15 @@ ul {
     display: flex;
     flex-grow: 1;
     justify-content: center;
+	margin-bottom: 150px;
 }
 
+.shoutbox {
+	width: 90%;
+	height: 60%;
+}
 
 /* Ads */
-
 .col-ads{
     overflow: auto;
     margin-bottom: 10px;
@@ -119,6 +84,13 @@ ul {
 }
 
 /* Table */
+.middle-content {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	align-items: center;
+}
+
 .justify-content-center {
 	justify-content: center !important;		
 }
@@ -134,6 +106,7 @@ ul {
 	flex-basis: 0;
 	flex-grow: 1;
 	max-width: 90%;
+	min-width: 90%;
 }
 
 .bigshadow.card {
@@ -250,6 +223,11 @@ td {
 .special > a {
 	color: #000;		
 }
+
+.special:hover {
+	cursor: pointer;		
+}
+
 
 /* Footer */
 .footer-container {
